Fixed x-overflow from dividers

--- a/resources/styles/styles.css
+++ b/resources/styles/styles.css
@@ -35,7 +35,6 @@ html {
  body {
     margin: 0;
     background-color: #fffafa;
-    overflow-x: hidden;
   }
   
   /**
@@ -81,9 +80,7 @@ html {
 .landing-page {
   display: flex;
   justify-content: center;
-  margin-left: 10px;
-  margin-right: 10px;
-  gap: 100px;
+  max-width: 100vw;
 }
 
 .landing-page-left {
@@ -432,6 +429,7 @@ button:hover .arrow {
 /** Divider */
 .divider {
   display: flex;
+  overflow-x: hidden;
 }
 
 .spike{
